[package]
name = "xmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binary_parser = { git = "https://github.com/BroGamer4256/binary_parser" }
clap = { version = "4.4.18", features = ["derive"] }
libflate = "2.0"

[profile.release]
lto = true
panic = 'abort'
strip = true
codegen-units = 1
incremental = true
